test auth check and add api annotations for tokens
