# docs/swagger.json
@@ -24,6 +24,13 @@
                 "summary": "Update branch",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Updated Branch",
                         "name": "branch",
                         "in": "body",
@@ -58,6 +65,13 @@
                 ],
                 "summary": "Create new branch",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Branch Creation Form",
                         "name": "form",
@@ -174,6 +188,13 @@
                 ],
                 "summary": "Adds a branchreview to a branch",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "branchreview creation form",
                         "name": "form",
@@ -293,6 +314,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "branch ID",
                         "name": "branchID",
                         "in": "path",
@@ -329,6 +357,13 @@
                 ],
                 "summary": "Returns whether the user is allowed to branchreview this branch",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "branch ID",
@@ -644,6 +679,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Branch ID",
                         "name": "branchID",
                         "in": "path",
@@ -726,6 +768,13 @@
                 "summary": "Create new reply discussion",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Reply Discussion Creation Form",
                         "name": "form",
                         "in": "body",
@@ -803,6 +852,13 @@
                 ],
                 "summary": "Create new root discussion",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Root Discussion Creation Form",
                         "name": "form",
@@ -884,6 +940,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "discussion ID",
                         "name": "discussionID",
                         "in": "path",
@@ -962,6 +1025,13 @@
                 ],
                 "summary": "Add a new report to a discussion",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Report Creation Form",
                         "name": "form",
@@ -1156,6 +1226,13 @@
                 "summary": "Update a member",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Updated member",
                         "name": "member",
                         "in": "body",
@@ -1178,7 +1255,7 @@
                 }
             },
             "post": {
-                "description": "Create a new member from the given fields",
+                "description": "Create a new member from the given fields.\nThe member must have a unique email address, which isn't associated with any other accounts.\nThey are automatically logged in, and an access + refresh token pair is returned alongside the member",
                 "consumes": [
                     "application/json"
                 ],
@@ -1204,11 +1281,97 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MemberDTO"
+                            "$ref": "#/definitions/models.LoggedInMemberDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/members/login": {
+            "get": {
+                "description": "Logs a member in based on email and password and returns an access and refresh token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "members"
+                ],
+                "summary": "Logs a member in",
+                "parameters": [
+                    {
+                        "description": "Member Authentication Form",
+                        "name": "member",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.MemberAuthForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoggedInMemberDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/members/token": {
+            "get": {
+                "description": "Refreshes the access token with a refresh token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "members"
+                ],
+                "summary": "Refreshes the access token.",
+                "parameters": [
+                    {
+                        "description": "Token Refresh Form",
+                        "name": "member",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.TokenRefreshForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TokenPairDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -1269,6 +1432,13 @@
                 ],
                 "summary": "Delete a member",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "member ID",
@@ -1529,6 +1699,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "member ID",
                         "name": "memberID",
                         "in": "path",
@@ -1615,6 +1792,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "member ID",
                         "name": "memberID",
                         "in": "path",
@@ -1656,6 +1840,13 @@
                 "summary": "Update post",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Updated Post",
                         "name": "post",
                         "in": "body",
@@ -1693,6 +1884,13 @@
                 ],
                 "summary": "Create new post",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Post Creation Form",
                         "name": "form",
@@ -1774,6 +1972,13 @@
                 ],
                 "summary": "Create new post with the version imported from github",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Post Creation Form",
                         "name": "form",
@@ -1901,6 +2106,13 @@
                 ],
                 "summary": "Delete a post",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "post ID",
@@ -2074,6 +2286,13 @@
                 "summary": "Add a new report to a post",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Report Creation Form",
                         "name": "form",
                         "in": "body",
@@ -2204,6 +2423,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Post ID",
                         "name": "postID",
                         "in": "path",
@@ -2245,6 +2471,13 @@
                 "summary": "Update project post",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Updated Project Post",
                         "name": "post",
                         "in": "body",
@@ -2279,6 +2512,13 @@
                 ],
                 "summary": "Create new project post",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Project Post Creation Form",
                         "name": "form",
@@ -2319,6 +2559,13 @@
                 ],
                 "summary": "Create new project post with the version imported from github",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Post Creation Form",
                         "name": "form",
@@ -2405,6 +2652,13 @@
                 ],
                 "summary": "Delete a project post",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "post ID",
@@ -2748,6 +3002,17 @@
                 }
             }
         },
+        "forms.MemberAuthForm": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "forms.MemberCreationForm": {
             "type": "object",
             "properties": {
@@ -2867,6 +3132,14 @@
                 },
                 "discussion": {
                     "$ref": "#/definitions/forms.DiscussionCreationForm"
+                }
+            }
+        },
+        "forms.TokenRefreshForm": {
+            "type": "object",
+            "properties": {
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         },
@@ -3050,6 +3323,20 @@
                 }
             }
         },
+        "models.LoggedInMemberDTO": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "member": {
+                    "$ref": "#/definitions/models.MemberDTO"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
         "models.MemberDTO": {
             "type": "object",
             "properties": {
@@ -3066,9 +3353,6 @@
                     "type": "string"
                 },
                 "lastName": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 },
                 "scientificFieldTagIDs": {
@@ -3260,6 +3544,17 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "models.TokenPairDTO": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         },
